--- a/documentation/themes/index.html
+++ b/documentation/themes/index.html
@@ -1,13 +1,36 @@
-<!doctype html><html lang=en-us dir=ltr><head><meta charset=utf-8><meta name=viewport content="width=device-width,minimum-scale=1,initial-scale=1"><link rel=stylesheet href=https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css><link rel=stylesheet href="https://fonts.googleapis.com/css?family=Hanken+Grotesk"><link rel=stylesheet href=https://fonts.cdnfonts.com/css/cascadia-code><title>| typst-posters</title><link rel=stylesheet href=/typst-posters/css/main.min.f280154ec7528623097e8239d00cb97c6d90f497667778fd29ce8f272df647b1.css integrity="sha256-8oAVTsdShiMJfoI50Ay5fG2Q9Jdmd3j9Kc6PJy32R7E=" crossorigin=anonymous><script src=/typst-posters/js/main.23cd0c7d837263b9eaeb96ee2d9ccfa2969daa3fa00fa1c1fe8701a9b87251a1.js integrity="sha256-I80MfYNyY7nq65buLZzPopadqj+gD6HB/ocBqbhyUaE=" crossorigin=anonymous></script></head><body><div class=page-container><header><div class=content><nav><div class=top-menu></div><div class=topnav><a href=https://jonaspleyer.github.io/typst-posters/>typst-posters</a></div></nav></div></header><div class=main-grid><div class=sidebar-left><div class=sidenav><div class=entry-formatter><a href=/typst-posters/>Home</a></div><div class=entry-formatter><a aria-current=true class=ancestor href=/typst-posters/documentation/>Documentation</a>
-<button class="dropdown-btn expanded"><img class="arrow-menu expanded" src=/typst-posters/arrow-menu.svg></button><div class=dropdown-container><div class=entry-formatter><a href=/typst-posters/documentation/boxes/>Boxes</a></div><div class=entry-formatter><a aria-current=page class=active href=/typst-posters/documentation/themes/>Themes</a></div></div></div><div class=entry-formatter><a>Showcase</a></div></div><script>var i,dropdown=document.getElementsByClassName("dropdown-btn");for(i=0;i<dropdown.length;i++)dropdown[i].addEventListener("click",function(){this.classList.toggle("expanded"),this.attributes.expanded=!0;var e=this.nextElementSibling;e.classList.toggle("hidden")})</script></div><div class=content><main><h1 id=themes>Themes</h1><pre tabindex=0><code class=language-typst data-lang=typst>(
+<!doctype html><html lang=en-us dir=ltr><head><meta charset=utf-8><meta name=viewport content="width=device-width,minimum-scale=1,initial-scale=1"><link rel=stylesheet href=https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css><link rel=stylesheet href="https://fonts.googleapis.com/css?family=Hanken+Grotesk"><link rel=stylesheet href=https://fonts.cdnfonts.com/css/cascadia-code><title>| typst-posters</title><link rel=stylesheet href=/typst-posters/css/main.min.9c6e73357a809d9e4642131432c39ac10203c0c6319b35b89e3a8781b8c30f5c.css integrity="sha256-nG5zNXqAnZ5GQhMUMsOawQIDwMYxmzW4njqHgbjDD1w=" crossorigin=anonymous><script src=/typst-posters/js/main.23cd0c7d837263b9eaeb96ee2d9ccfa2969daa3fa00fa1c1fe8701a9b87251a1.js integrity="sha256-I80MfYNyY7nq65buLZzPopadqj+gD6HB/ocBqbhyUaE=" crossorigin=anonymous></script></head><body><div class=page-container><header><div class=content><nav><div class=top-menu></div><div class=topnav><a href=https://jonaspleyer.github.io/typst-posters/>typst-posters</a>
+<a class=header-author href="mailto:jonas.sci@pleyer.org?subject=typst-posters">Jonas Pleyer</a></div></nav></div></header><div class=main-grid><div class=sidebar-left><div class=sidenav><div class=entry-formatter><a href=/typst-posters/>Home</a></div><div class=entry-formatter><a aria-current=true class=ancestor href=/typst-posters/documentation/>Documentation</a>
+<button class="dropdown-btn expanded"><img class="arrow-menu expanded" src=/typst-posters/arrow-menu.svg></button><div class=dropdown-container><div class=entry-formatter><a href=/typst-posters/documentation/boxes/>Boxes</a></div><div class=entry-formatter><a aria-current=page class=active href=/typst-posters/documentation/themes/>Themes</a></div></div></div><div class=entry-formatter><a href=/typst-posters/showcase/>Showcase</a></div></div><script>var i,dropdown=document.getElementsByClassName("dropdown-btn");for(i=0;i<dropdown.length;i++)dropdown[i].addEventListener("click",function(){this.classList.toggle("expanded"),this.attributes.expanded=!0;var e=this.nextElementSibling;e.classList.toggle("hidden")})</script></div><div class=content><main><h1 id=themes>Themes</h1><p>Themes are dictionaries with particular variables that control overall styling of the generated boxes.
+The dictionary is saved as a <a href=https://typst.app/docs/reference/meta/state/>state</a> variable and can be accessed by the <code>update_theme</code> and <code>set_theme</code> methods.
+Most of the time, themes are meant to be set initially without any further alteration.</p><pre tabindex=0><code class=language-typst data-lang=typst>theme = (
+    &#34;body_color&#34;: <a href=https://typst.app/docs/reference/visualize/color/ class="code-type-color code-type-block">color</a>,
+    &#34;body_background&#34;: <a href=https://typst.app/docs/reference/visualize/color/ class="code-type-color code-type-block">color</a>,
+    &#34;heading_color&#34;: <a href=https://typst.app/docs/reference/visualize/color/ class="code-type-color code-type-block">color</a>,
+    &#34;heading_background&#34;: <a href=https://typst.app/docs/reference/visualize/color/ class="code-type-color code-type-block">color</a>,
+)
+</code></pre><h2 id=updating-a-theme>Updating a Theme</h2><pre tabindex=0><code class=language-typst data-lang=typst>update_theme(
+    body_color: <a href=https://typst.app/docs/reference/visualize/color/ class="code-type-color code-type-block">color</a>,
+    body_background: <a href=https://typst.app/docs/reference/visualize/color/ class="code-type-color code-type-block">color</a>,
+    heading_color: <a href=https://typst.app/docs/reference/visualize/color/ class="code-type-color code-type-block">color</a>,
+    heading_background: <a href=https://typst.app/docs/reference/visualize/color/ class="code-type-color code-type-block">color</a>,
+)
+</code></pre><h3 id=note-updating-in-the-middle-of-the-document>Note: Updating in the middle of the document</h3><p>The user can also update the theme in the middle of the document.
+This will alter all following boxes but should not touch preceding ones.</p><h2 id=setting-a-new-theme>Setting a new Theme</h2><p>To entirely change the theme of a document, one can use this method and set the new theme.
+It is not checked that all keys and values are properly populated.
+Thus the user is responsible for defining them.
+It is often easier to instead take an existing theme and modify its entries.</p><pre tabindex=0><code class=language-typst data-lang=typst>set_theme(
+    theme: <a href=https://typst.app/docs/reference/foundations/dictionary/ class="code-type-dictionary code-type-block">dictionary</a>
+)
+</code></pre><h2 id=example-themes>Example Themes</h2><h3 id=default>Default</h3><p>The default values of the theme. If nothing is specified by the user, these values will be chosen.</p><pre tabindex=0><code class=language-typst data-lang=typst>default = (
     &#34;body_color&#34;: black,
     &#34;body_background&#34;: white,
     &#34;heading_color&#34;: white,
     &#34;heading_background&#34;: rgb(25, 61, 112),
 )
-</code></pre><h2 id=setting-a-new-theme>Setting a new Theme</h2><pre tabindex=0><code class=language-typst data-lang=typst>update_theme(..args)
-</code></pre><h2 id=updating-a-theme>Updating a Theme</h2><pre tabindex=0><code class=language-typst data-lang=typst>set_theme(
-    theme: [dict]
+</code></pre><h3 id=uni-freiburg>Uni Freiburg</h3><p>A theme surrounding colors specifically chosen in complience with the corporate design of the University of Freiburg.</p><pre tabindex=0><code class=language-typst data-lang=typst>uni_fr = (
+    &#34;body_color&#34;: black,
+    &#34;body_background&#34;: white,
+    &#34;heading_color&#34;: white,
+    &#34;heading_background&#34;: rgb(&#34;#1d154d&#34;),
 )
-</code></pre><h2 id=example-themes>Example Themes</h2><pre tabindex=0><code class=language-typst data-lang=typst>uni_fr
 </code></pre></main></div><div class=sidebar-right></div></div><footer><div class=content><p>Copyright 2023. All rights reserved.</p></div></footer></div></body></html>
