--- a/index.html
+++ b/index.html
@@ -1,38 +1,55 @@
-<!doctype html><html lang=en-us dir=ltr><head><meta name=generator content="Hugo 0.119.0"><meta charset=utf-8><meta name=viewport content="width=device-width,minimum-scale=1,initial-scale=1"><link rel=stylesheet href=https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css><link rel=stylesheet href="https://fonts.googleapis.com/css?family=Hanken+Grotesk"><link rel=stylesheet href=https://fonts.cdnfonts.com/css/cascadia-code><title>typst-posters</title><link rel=stylesheet href=/typst-posters/css/main.min.9c6e73357a809d9e4642131432c39ac10203c0c6319b35b89e3a8781b8c30f5c.css integrity="sha256-nG5zNXqAnZ5GQhMUMsOawQIDwMYxmzW4njqHgbjDD1w=" crossorigin=anonymous><script src=/typst-posters/js/main.23cd0c7d837263b9eaeb96ee2d9ccfa2969daa3fa00fa1c1fe8701a9b87251a1.js integrity="sha256-I80MfYNyY7nq65buLZzPopadqj+gD6HB/ocBqbhyUaE=" crossorigin=anonymous></script></head><body><div class=page-container><header><div class=content><nav><div class=top-menu></div><div class=topnav><a href=https://jonaspleyer.github.io/typst-posters/>typst-posters</a>
+<!doctype html><html lang=en-us dir=ltr><head><meta name=generator content="Hugo 0.119.0"><meta charset=utf-8><meta name=viewport content="width=device-width,minimum-scale=1,initial-scale=1"><link rel=stylesheet href=https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css><link rel=stylesheet href="https://fonts.googleapis.com/css?family=Hanken+Grotesk"><link rel=stylesheet href=https://fonts.cdnfonts.com/css/cascadia-code><title>typst-posters</title><link rel=stylesheet href=/typst-posters/css/main.min.d94d96bbd876279cc1f34cf6b1932fa3ca52e600b96800f79e23b81b87017d3e.css integrity="sha256-2U2Wu9h2J5zB80z2sZMvo8pS5gC5aAD3niO4G4cBfT4=" crossorigin=anonymous><script src=/typst-posters/js/main.23cd0c7d837263b9eaeb96ee2d9ccfa2969daa3fa00fa1c1fe8701a9b87251a1.js integrity="sha256-I80MfYNyY7nq65buLZzPopadqj+gD6HB/ocBqbhyUaE=" crossorigin=anonymous></script></head><body><div class=page-container><header><div class=content><nav><div class=top-menu></div><div class=topnav><a href=https://jonaspleyer.github.io/typst-posters/>typst-posters</a>
 <a class=header-author href="mailto:jonas.sci@pleyer.org?subject=typst-posters">Jonas Pleyer</a></div></nav></div></header><div class=main-grid><div class=sidebar-left><div class=sidenav><div class=entry-formatter><a aria-current=page class=active href=/typst-posters/>Home</a></div><div class=entry-formatter><a href=/typst-posters/documentation/>Documentation</a>
-<button class=dropdown-btn><img class=arrow-menu src=/typst-posters/arrow-menu.svg></button><div class="dropdown-container hidden"><div class=entry-formatter><a href=/typst-posters/documentation/boxes/>Boxes</a></div><div class=entry-formatter><a href=/typst-posters/documentation/themes/>Themes</a></div></div></div><div class=entry-formatter><a href=/typst-posters/showcase/>Showcase</a></div></div><script>var i,dropdown=document.getElementsByClassName("dropdown-btn");for(i=0;i<dropdown.length;i++)dropdown[i].addEventListener("click",function(){this.classList.toggle("expanded"),this.attributes.expanded=!0;var e=this.nextElementSibling;e.classList.toggle("hidden")})</script></div><div class=content><main><h1 id=overview>Overview</h1><p><code>typst-posters</code> allows to create simple but elegant posters.
+<button class=dropdown-btn><img class=arrow-menu src=/typst-posters/arrow-menu.svg></button><div class="dropdown-container hidden"><div class=entry-formatter><a href=/typst-posters/documentation/boxes/>Boxes</a></div><div class=entry-formatter><a href=/typst-posters/documentation/themes/>Themes</a></div><div class=entry-formatter><a href=/typst-posters/documentation/layouts/>Layouts</a></div></div></div><div class=entry-formatter><a href=/typst-posters/showcase/>Showcase</a></div><div class=entry-formatter><a href=/typst-posters/tips_and_tricks/>Tips and Tricks</a></div></div><script>var i,dropdown=document.getElementsByClassName("dropdown-btn");for(i=0;i<dropdown.length;i++)dropdown[i].addEventListener("click",function(){this.classList.toggle("expanded"),this.attributes.expanded=!0;var e=this.nextElementSibling;e.classList.toggle("hidden")})</script></div><div class=content><main><h1 id=overview>Overview</h1><p><code>typst-posters</code> allows to create simple but elegant posters.
 It does not make any assumptions about layout (eg. 2/3 column), size of the poster (eg. a0, a1) or orientation.
 Its main functionality is provided by a handful of functions that create <a href=documentation/boxes>boxes</a> with optional titles.
 There are specific functions for defining title boxes and bottom boxes.
-It provides predefined <a href=documentation/themes>themes</a> which can be adjusted to customize the design of the boxes.</p><p>To find out what you can do today with <code>typst-posters</code>, have a look at the <a href=showcase>showcased examples</a>.</p><h2 id=example>Example</h2><p>We begin by importing the <code>typst-posters</code> package</p><pre tabindex=0><code>/// IMPORT THE POSTERS PACKAGE
-#import &#34;typst-posters/lib.typ&#34;: *
-</code></pre><p>Next, we specify some general settings formatting settings.</p><pre tabindex=0><code>#set page(&#34;a0&#34;, margin: 1.5cm,)
-#set text(font: &#34;Arial&#34;, size: 33pt)
+It provides predefined <a href=documentation/themes>themes</a> which can be adjusted to customize the design of the boxes.</p><p>To find out what you can do today with <code>typst-posters</code>, have a look at the <a href=showcase>showcased examples</a>.</p><h2 id=example>Example</h2><p>We begin by importing the <code>typst-posters</code> package</p><pre tabindex=0><code>#import &#34;typst-posters/lib.typ&#34;: *
+</code></pre><p>Next, we specify some general settings formatting settings.</p><pre tabindex=0><code>#set page(&#34;a0&#34;, margin: 1cm)
+#set_layout(layout_a0)
+#set text(font: &#34;Arial&#34;, size: layout_a0.at(&#34;body_size&#34;))
 </code></pre><p>After that we choose a predefined theme.</p><pre tabindex=0><code>#set_theme(uni_fr)
 </code></pre><p>We can adjust any property of the theme via the <code>update_theme</code> method of the <a href=documentation/themes>themes</a> module.
 The poster consists of multiple boxes which can be adjusted by specifying <a href=https://typst.app/docs/reference/layout/columns/>column layouts</a>.
 <code>typst-posters</code> provideds some predefiend methods for creating a title-box, regular column-boxes in between, a bottom box and bibliography to finish it of.</p><pre tabindex=0><code>#title_box(
-	[Writing typst is fun],
-	authors: [Jonas Pleyer#super(1)],
-	institutes: [#super(1)Freiburg],
+    [`typst-posters`],
+    subtitle: [Scientific Posters for any Occasion],
+    authors: [Jonas Pleyer#super(&#34;1&#34;)],
+    institutes: [#super(&#34;1&#34;)Freiburg Center for Data-Analysis and Modelling],
+    keywords: [Science, Poster, Typesetting, `typst`],
 )
 
+#columns(2, [
+    #column_box(
+        heading: [Left Column],
+    )[
+        Multi-Column layouts are supported out of the box by typsts `columns()` method.
+    ]
+
+    #colbreak()
+
+    #column_box()[
+        We can also choose to not have a title for our boxes.
+    ]
+])
+
 #column_box()[
-	this box will have a 100% width by default.
-    If we do not specify otherwise, no heading
-    will be displayed.
+    We can update the layout of the boxes in the middle of the document.
 ]
 
-#columns(2)[
-    #column_box()[This box will have 50% width and is left],
-    #column_box()[Again a 1/2 width box and left.]
+#_common_box(heading: [only heading])
 
-    #columnbreak()
-
-    #column_box()[We are moving towards the right-hand side.]
-]
+#columns(2, [
+    #colbreak()
+    #column_box(
+        heading: [Stretching],
+        stretch_to_bottom: true
+    )[
+        And stretch boxes to the next lowest box (or bottom of the page)
+    ]
+])
 
 #bottom_box()[
-    Acknowledgements: Chili, Cara
+    Align them to the bottom.
 ]
-</code></pre></main></div><div class=sidebar-right></div></div><footer><div class=content><p>Copyright 2023. All rights reserved.</p></div></footer></div></body></html>
+</code></pre><h2 id=final-result>Final Result</h2><div class=showcase-single style=text-align:center;padding:1em><a href=examples/getting_started/main.pdf><img src=examples/getting_started/main.png width=100%></a></div></main></div><div class=sidebar-right></div></div><footer><div class=content><p>Copyright 2023. All rights reserved.</p></div></footer></div></body></html>
