--- a/index.html
+++ b/index.html
@@ -4,14 +4,16 @@
 It does not make any assumptions about layout (eg. 2/3 column), size of the poster (eg. a0, a1) or orientation.
 Its main functionality is provided by a handful of functions that create <a href=documentation/boxes>boxes</a> with optional titles.
 There are specific functions for defining title boxes and bottom boxes.
-It provides predefined <a href=documentation/themes>themes</a> which can be adjusted to customize the design of the boxes.</p><p>To find out what you can do today with <code>typst-posters</code>, have a look at the <a href=showcase>showcased examples</a>.</p><h2 id=example>Example</h2><p>We begin by importing the <code>typst-posters</code> package</p><pre tabindex=0><code>#import &#34;typst-posters/lib.typ&#34;: *
-</code></pre><p>Next, we specify some general settings formatting settings.</p><pre tabindex=0><code>#set page(&#34;a0&#34;, margin: 1cm)
-#set_layout(layout_a0)
+It provides predefined <a href=documentation/themes>themes</a> which can be adjusted to customize the design of the boxes.</p><p>To find out what you can do today with <code>typst-posters</code>, have a look at the <a href=showcase>showcased examples</a>.</p><h2 id=example>Example</h2><p>We begin by importing the <code>typst-posters</code> package</p><pre tabindex=0><code class=language-typst data-lang=typst>#import &#34;../../../../lib.typ&#34;: *</code></pre><p>Next, we specify some general settings formatting settings.</p><pre tabindex=0><code class=language-typst data-lang=typst>#set page(&#34;a0&#34;, margin: 1cm)
+#set_poster_layout(layout_a0)
 #set text(font: &#34;Arial&#34;, size: layout_a0.at(&#34;body_size&#34;))
-</code></pre><p>After that we choose a predefined theme.</p><pre tabindex=0><code>#set_theme(uni_fr)
-</code></pre><p>We can adjust any property of the theme via the <code>update_theme</code> method of the <a href=documentation/themes>themes</a> module.
+
+#let box_spacing = 1.2em
+#set columns(gutter: box_spacing)
+#set block(spacing: box_spacing)
+#update_poster_layout(spacing: box_spacing)</code></pre><p>After that we choose a predefined theme.</p><pre tabindex=0><code class=language-typst data-lang=typst>#set_theme(uni_fr)</code></pre><p>We can adjust any property of the theme via the <code>update_theme</code> method of the <a href=documentation/themes>themes</a> module.
 The poster consists of multiple boxes which can be adjusted by specifying <a href=https://typst.app/docs/reference/layout/columns/>column layouts</a>.
-<code>typst-posters</code> provideds some predefiend methods for creating a title-box, regular column-boxes in between, a bottom box and bibliography to finish it of.</p><pre tabindex=0><code>#title_box(
+<code>typst-posters</code> provideds some predefiend methods for creating a title-box, regular column-boxes in between, a bottom box and bibliography to finish it of.</p><pre tabindex=0><code class=language-typst data-lang=typst>#title_box(
     [`typst-posters`],
     subtitle: [Scientific Posters for any Occasion],
     authors: [Jonas Pleyer#super(&#34;1&#34;)],
@@ -28,7 +30,9 @@ The poster consists of multiple boxes which can be adjusted by specifying <a hre
 
     #colbreak()
 
-    #column_box()[
+    #column_box(
+        stretch_to_next: true,
+    )[
         We can also choose to not have a title for our boxes.
     ]
 ])
@@ -43,7 +47,7 @@ The poster consists of multiple boxes which can be adjusted by specifying <a hre
     #colbreak()
     #column_box(
         heading: [Stretching],
-        stretch_to_bottom: true
+        stretch_to_next: true
     )[
         And stretch boxes to the next lowest box (or bottom of the page)
     ]
@@ -51,5 +55,4 @@ The poster consists of multiple boxes which can be adjusted by specifying <a hre
 
 #bottom_box()[
     Align them to the bottom.
-]
-</code></pre><h2 id=final-result>Final Result</h2><div class=showcase-single style=text-align:center;padding:0><a href=examples/getting_started/main.pdf><img src=examples/getting_started/main.png width=100%></a></div></main></div><div class=sidebar-right></div></div><footer><div class=content><p>Copyright 2024. All rights reserved.</p></div></footer></div></body></html>
+]</code></pre><h2 id=final-result>Final Result</h2><div class=showcase-single style=text-align:center;padding:0><a href=examples/getting_started/main.pdf><img src=examples/getting_started/main.png width=100%></a></div></main></div><div class=sidebar-right></div></div><footer><div class=content><p>Copyright 2024. All rights reserved.</p></div></footer></div></body></html>
