--- a/documentation/themes/index.html
+++ b/documentation/themes/index.html
@@ -1,22 +1,22 @@
-<!doctype html><html lang=en-us dir=ltr><head><meta charset=UTF-8><meta name=viewport content="width=device-width,initial-scale=1"><meta name=description content='Themes # Themes are dictionaries with particular variables that control overall styling of the generated boxes. The dictionary is saved as a state variable and can be accessed by the update_theme and set_theme methods. Most of the time, themes are meant to be set initially without any further alteration.
-theme = ( "body_box_args": [dictionary], "body_box_args_with_title": [dictionary], "body_box_function": [function], "heading_box_args": [dictionary], "heading_box_args_with_body": [dictionary], "heading_box_function": [function], ) Argument Type Default Value Description body_box_args [dictionary] Arguemtns given to the body box.'><meta name=theme-color media="(prefers-color-scheme: light)" content="#ffffff"><meta name=theme-color media="(prefers-color-scheme: dark)" content="#343a40"><meta name=color-scheme content="light dark"><meta property="og:title" content="Themes"><meta property="og:description" content='Themes # Themes are dictionaries with particular variables that control overall styling of the generated boxes. The dictionary is saved as a state variable and can be accessed by the update_theme and set_theme methods. Most of the time, themes are meant to be set initially without any further alteration.
-theme = ( "body_box_args": [dictionary], "body_box_args_with_title": [dictionary], "body_box_function": [function], "heading_box_args": [dictionary], "heading_box_args_with_body": [dictionary], "heading_box_function": [function], ) Argument Type Default Value Description body_box_args [dictionary] Arguemtns given to the body box.'><meta property="og:type" content="article"><meta property="og:url" content="https://jonaspleyer.github.io/peace-of-posters/documentation/themes/"><meta property="article:section" content="documentation"><title>Themes | peace-of-posters</title>
-<link rel=manifest href=/peace-of-posters/manifest.json><link rel=icon href=/peace-of-posters/favicon.png><link rel=canonical href=https://jonaspleyer.github.io/peace-of-posters/documentation/themes/><link rel=stylesheet href=/peace-of-posters/book.min.fac77f4c247fad0b9e26b59172691d98e52080385f7f19bdabfd74b8cdf1b2da.css integrity="sha256-+sd/TCR/rQueJrWRcmkdmOUggDhffxm9q/10uM3xsto=" crossorigin=anonymous><script defer src=/peace-of-posters/flexsearch.min.js></script><script defer src=/peace-of-posters/en.search.min.16f8ff7a0be36c4c90b25126f94a181d0e83f997e1618dd302645a017c19fd51.js integrity="sha256-Fvj/egvjbEyQslEm+UoYHQ6D+ZfhYY3TAmRaAXwZ/VE=" crossorigin=anonymous></script></head><body dir=ltr><input type=checkbox class="hidden toggle" id=menu-control>
+<!doctype html><html lang=en-us dir=ltr><head><meta charset=UTF-8><meta name=viewport content="width=device-width,initial-scale=1"><meta name=description content='Themes # Themes are dictionaries with particular variables that control overall styling of the generated boxes. The dictionary is saved as a state variable and can be accessed by the update-theme and set-theme methods. Most of the time, themes are meant to be set initially without any further alteration.
+theme = ( "body-box-args": [dictionary], "body-box-args-with-title": [dictionary], "body-box-function": [function], "heading-box-args": [dictionary], "heading-box-args-with-body": [dictionary], "heading-box-function": [function], ) Argument Type Default Value Description body-box-args [dictionary] Arguemtns given to the body box.'><meta name=theme-color media="(prefers-color-scheme: light)" content="#ffffff"><meta name=theme-color media="(prefers-color-scheme: dark)" content="#343a40"><meta name=color-scheme content="light dark"><meta property="og:title" content="Themes"><meta property="og:description" content='Themes # Themes are dictionaries with particular variables that control overall styling of the generated boxes. The dictionary is saved as a state variable and can be accessed by the update-theme and set-theme methods. Most of the time, themes are meant to be set initially without any further alteration.
+theme = ( "body-box-args": [dictionary], "body-box-args-with-title": [dictionary], "body-box-function": [function], "heading-box-args": [dictionary], "heading-box-args-with-body": [dictionary], "heading-box-function": [function], ) Argument Type Default Value Description body-box-args [dictionary] Arguemtns given to the body box.'><meta property="og:type" content="article"><meta property="og:url" content="https://jonaspleyer.github.io/peace-of-posters/documentation/themes/"><meta property="article:section" content="documentation"><title>Themes | peace-of-posters</title>
+<link rel=manifest href=/peace-of-posters/manifest.json><link rel=icon href=/peace-of-posters/favicon.png><link rel=canonical href=https://jonaspleyer.github.io/peace-of-posters/documentation/themes/><link rel=stylesheet href=/peace-of-posters/book.min.fac77f4c247fad0b9e26b59172691d98e52080385f7f19bdabfd74b8cdf1b2da.css integrity="sha256-+sd/TCR/rQueJrWRcmkdmOUggDhffxm9q/10uM3xsto=" crossorigin=anonymous><script defer src=/peace-of-posters/flexsearch.min.js></script><script defer src=/peace-of-posters/en.search.min.777ef635b2346be53c7c63a26bacaee6c145057b5b1adc42279c3fecfa66d6fd.js integrity="sha256-d372NbI0a+U8fGOia6yu5sFFBXtbGtxCJ5w/7Ppm1v0=" crossorigin=anonymous></script></head><body dir=ltr><input type=checkbox class="hidden toggle" id=menu-control>
 <input type=checkbox class="hidden toggle" id=toc-control><main class="container flex"><aside class=book-menu><div class=book-menu-content><nav><h2 class=book-brand><a class="flex align-center" href=/peace-of-posters/><img src=/peace-of-posters/favicon.svg alt=Logo><span>peace-of-posters</span></a></h2><div class=book-search><input type=text id=book-search-input placeholder=Search aria-label=Search maxlength=64 data-hotkeys=s/><div class="book-search-spinner hidden"></div><ul id=book-search-results></ul></div><ul><li><a href=/peace-of-posters/showcase/>Showcase</a><ul><li><a href=/peace-of-posters/showcase/2023-10-23-bwhpc-symposium/>bwHPC Symposium 2023</a></li></ul></li><li><a href=/peace-of-posters/documentation/>Documentation</a><ul><li><a href=/peace-of-posters/documentation/boxes/>Boxes</a></li><li><a href=/peace-of-posters/documentation/layouts/>Layouts</a></li><li><a href=/peace-of-posters/documentation/themes/ class=active>Themes</a></li><li><a href=/peace-of-posters/documentation/tips_and_tricks/>Tips and Tricks</a></li></ul></li></ul></nav><script>(function(){var e=document.querySelector("aside .book-menu-content");addEventListener("beforeunload",function(){localStorage.setItem("menu.scrollTop",e.scrollTop)}),e.scrollTop=localStorage.getItem("menu.scrollTop")})()</script></div></aside><div class=book-page><header class=book-header><div class="flex align-center justify-between"><label for=menu-control><img src=/peace-of-posters/svg/menu.svg class=book-icon alt=Menu>
 </label><strong>Themes</strong>
 <label for=toc-control><img src=/peace-of-posters/svg/toc.svg class=book-icon alt="Table of Contents"></label></div><aside class="hidden clearfix"><nav id=TableOfContents><ul><li><a href=#updating-a-theme>Updating a Theme</a><ul><li><a href=#note-updating-in-the-middle-of-the-document>Note: Updating in the middle of the document</a></li></ul></li><li><a href=#setting-a-new-theme>Setting a new Theme</a></li><li><a href=#example-themes>Example Themes</a><ul><li><a href=#default>Default</a></li><li><a href=#uni-freiburg>Uni Freiburg</a></li></ul></li></ul></nav></aside></header><h1 id=themes>Themes
 <a class=anchor href=#themes>#</a></h1><p>Themes are dictionaries with particular variables that control overall styling of the generated boxes.
-The dictionary is saved as a <a href=https://typst.app/docs/reference/meta/state/>state</a> variable and can be accessed by the <code>update_theme</code> and <code>set_theme</code> methods.
+The dictionary is saved as a <a href=https://typst.app/docs/reference/meta/state/>state</a> variable and can be accessed by the <code>update-theme</code> and <code>set-theme</code> methods.
 Most of the time, themes are meant to be set initially without any further alteration.</p><pre tabindex=0><code class=language-typst data-lang=typst>theme = (
-    &#34;body_box_args&#34;: <a href=https://typst.app/docs/reference/foundations/dictionary/ class="code-type-dictionary code-type-block">dictionary</a>,
-    &#34;body_box_args_with_title&#34;: <a href=https://typst.app/docs/reference/foundations/dictionary/ class="code-type-dictionary code-type-block">dictionary</a>,
-    &#34;body_box_function&#34;: <a href=https://typst.app/docs/reference/foundations/function/ class="code-type-function code-type-block">function</a>,
-    &#34;heading_box_args&#34;: <a href=https://typst.app/docs/reference/foundations/dictionary/ class="code-type-dictionary code-type-block">dictionary</a>,
-    &#34;heading_box_args_with_body&#34;: <a href=https://typst.app/docs/reference/foundations/dictionary/ class="code-type-dictionary code-type-block">dictionary</a>,
-    &#34;heading_box_function&#34;: <a href=https://typst.app/docs/reference/foundations/function/ class="code-type-function code-type-block">function</a>,
+    &#34;body-box-args&#34;: <a href=https://typst.app/docs/reference/foundations/dictionary/ class="code-type-dictionary code-type-block">dictionary</a>,
+    &#34;body-box-args-with-title&#34;: <a href=https://typst.app/docs/reference/foundations/dictionary/ class="code-type-dictionary code-type-block">dictionary</a>,
+    &#34;body-box-function&#34;: <a href=https://typst.app/docs/reference/foundations/function/ class="code-type-function code-type-block">function</a>,
+    &#34;heading-box-args&#34;: <a href=https://typst.app/docs/reference/foundations/dictionary/ class="code-type-dictionary code-type-block">dictionary</a>,
+    &#34;heading-box-args-with-body&#34;: <a href=https://typst.app/docs/reference/foundations/dictionary/ class="code-type-dictionary code-type-block">dictionary</a>,
+    &#34;heading-box-function&#34;: <a href=https://typst.app/docs/reference/foundations/function/ class="code-type-function code-type-block">function</a>,
 )
-</code></pre><table><thead><tr><th>Argument</th><th>Type</th><th>Default Value</th><th>Description</th></tr></thead><tbody><tr><td><code>body_box_args</code></td><td><a href=https://typst.app/docs/reference/foundations/dictionary/ class="code-type-dictionary code-type-block">dictionary</a></td><td></td><td>Arguemtns given to the body box.</td></tr><tr><td><code>body_box_args_with_title</code></td><td><a href=https://typst.app/docs/reference/foundations/dictionary/ class="code-type-dictionary code-type-block">dictionary</a></td><td></td><td>Arguemtns given to the body box when a title is present. This dictionary is optional. Leaving</td></tr><tr><td><code>body_box_function</code></td><td><a href=https://typst.app/docs/reference/foundations/function/ class="code-type-function code-type-block">function</a></td><td></td><td>Arguemtns given to the body box.</td></tr><tr><td><code>heading_box_args</code></td><td><a href=https://typst.app/docs/reference/foundations/dictionary/ class="code-type-dictionary code-type-block">dictionary</a></td><td></td><td>Arguemtns given to the body box.</td></tr><tr><td><code>heading_box_args_with_body</code></td><td><a href=https://typst.app/docs/reference/foundations/dictionary/ class="code-type-dictionary code-type-block">dictionary</a></td><td></td><td>Arguemtns given to the body box.</td></tr><tr><td><code>heading_box_function</code></td><td><a href=https://typst.app/docs/reference/foundations/function/ class="code-type-function code-type-block">function</a></td><td></td><td>Arguemtns given to the body box.</td></tr></tbody></table><h2 id=updating-a-theme>Updating a Theme
-<a class=anchor href=#updating-a-theme>#</a></h2><pre tabindex=0><code class=language-typst data-lang=typst>update_theme(
+</code></pre><table><thead><tr><th>Argument</th><th>Type</th><th>Default Value</th><th>Description</th></tr></thead><tbody><tr><td><code>body-box-args</code></td><td><a href=https://typst.app/docs/reference/foundations/dictionary/ class="code-type-dictionary code-type-block">dictionary</a></td><td></td><td>Arguemtns given to the body box.</td></tr><tr><td><code>body-box-args-with-title</code></td><td><a href=https://typst.app/docs/reference/foundations/dictionary/ class="code-type-dictionary code-type-block">dictionary</a></td><td></td><td>Arguemtns given to the body box when a title is present. This dictionary is optional. Leaving</td></tr><tr><td><code>body-box-function</code></td><td><a href=https://typst.app/docs/reference/foundations/function/ class="code-type-function code-type-block">function</a></td><td></td><td>Arguemtns given to the body box.</td></tr><tr><td><code>heading-box-args</code></td><td><a href=https://typst.app/docs/reference/foundations/dictionary/ class="code-type-dictionary code-type-block">dictionary</a></td><td></td><td>Arguemtns given to the body box.</td></tr><tr><td><code>heading-box-args-with-body</code></td><td><a href=https://typst.app/docs/reference/foundations/dictionary/ class="code-type-dictionary code-type-block">dictionary</a></td><td></td><td>Arguemtns given to the body box.</td></tr><tr><td><code>heading-box-function</code></td><td><a href=https://typst.app/docs/reference/foundations/function/ class="code-type-function code-type-block">function</a></td><td></td><td>Arguemtns given to the body box.</td></tr></tbody></table><h2 id=updating-a-theme>Updating a Theme
+<a class=anchor href=#updating-a-theme>#</a></h2><pre tabindex=0><code class=language-typst data-lang=typst>update-theme(
     ..args
 )
 </code></pre><p>All arguments coincide with the values of the ones of <code>theme</code> shown above.</p><h3 id=note-updating-in-the-middle-of-the-document>Note: Updating in the middle of the document
@@ -25,41 +25,41 @@ This will alter all following boxes but should not touch preceding ones.</p><h2 
 <a class=anchor href=#setting-a-new-theme>#</a></h2><p>To entirely change the theme of a document, one can use this method and set the new theme.
 It is not checked that all keys and values are properly populated.
 Thus the user is responsible for defining them.
-It is often easier to instead take an existing theme and modify its entries.</p><pre tabindex=0><code class=language-typst data-lang=typst>set_theme(
+It is often easier to instead take an existing theme and modify its entries.</p><pre tabindex=0><code class=language-typst data-lang=typst>set-theme(
     theme: <a href=https://typst.app/docs/reference/foundations/dictionary/ class="code-type-dictionary code-type-block">dictionary</a>
 )
 </code></pre><h2 id=example-themes>Example Themes
 <a class=anchor href=#example-themes>#</a></h2><h3 id=default>Default
 <a class=anchor href=#default>#</a></h3><p>The default values of the theme. If nothing is specified by the user, these values will be chosen.</p><pre tabindex=0><code class=language-typst data-lang=typst>default = (
-    &#34;body_box_args&#34;: (
+    &#34;body-box-args&#34;: (
         inset: 0.6em,
         width: 100%,
     ),
-    &#34;body_text_args&#34;: (:),
-    &#34;heading_box_args&#34;: (
+    &#34;body-text-args&#34;: (:),
+    &#34;heading-box-args&#34;: (
         inset: 0.6em,
         width: 100%,
         fill: rgb(50, 50, 50),
         stroke: rgb(25, 25, 25),
     ),
-    &#34;heading_text_args&#34;: (
+    &#34;heading-text-args&#34;: (
         fill: white,
     )
 )
 </code></pre><h3 id=uni-freiburg>Uni Freiburg
-<a class=anchor href=#uni-freiburg>#</a></h3><p>A theme surrounding colors specifically chosen in complience with the corporate design of the University of Freiburg.</p><pre tabindex=0><code class=language-typst data-lang=typst>#let uni_fr = (
-    &#34;body_box_args&#34;: (
+<a class=anchor href=#uni-freiburg>#</a></h3><p>A theme surrounding colors specifically chosen in complience with the corporate design of the University of Freiburg.</p><pre tabindex=0><code class=language-typst data-lang=typst>#let uni-fr = (
+    &#34;body-box-args&#34;: (
         inset: 0.6em,
         width: 100%,
     ),
-    &#34;body_text_args&#34;: (:),
-    &#34;heading_box_args&#34;: (
+    &#34;body-text-args&#34;: (:),
+    &#34;heading-box-args&#34;: (
         inset: 0.6em,
         width: 100%,
         fill: rgb(&#34;#1d154d&#34;),
         stroke: rgb(&#34;#1d154d&#34;),
     ),
-    &#34;heading_text_args&#34;: (
+    &#34;heading-text-args&#34;: (
         fill: white,
     ),
 )
