deploy: 64b6ca02409efa2b67f8d207e1d6e0656bd223d1

--- a/showcase/2023-10-23-bwhpc-symposium/index.html
+++ b/showcase/2023-10-23-bwhpc-symposium/index.html
@@ -208,7 +208,7 @@
 </span><span style="white-space:pre;-webkit-user-select:none;user-select:none;margin-right:.4em;padding:0 .4em;color:#838ba7">206
 </span><span style="white-space:pre;-webkit-user-select:none;user-select:none;margin-right:.4em;padding:0 .4em;color:#838ba7">207
 </span></code></pre></td><td style=vertical-align:top;padding:0;margin:0;border:0;width:100%><pre tabindex=0 style=color:#c6d0f5;background-color:#303446;-moz-tab-size:4;-o-tab-size:4;tab-size:4><code class=language-typst data-lang=typst><span style=display:flex><span><span style=color:#737994;font-style:italic>/// IMPORT THE POSTERS PACKAGE</span>
-</span></span><span style=display:flex><span><span style=color:#81c8be>#import</span> <span style=color:#a6d189>&#34;@preview/peace-of-posters:0.4.3&#34;</span> <span style=color:#ca9ee6>as</span> <span style=color:#f2d5cf>pop</span>
+</span></span><span style=display:flex><span><span style=color:#81c8be>#import</span> <span style=color:#a6d189>&#34;@preview/peace-of-posters:0.5.5&#34;</span> <span style=color:#ca9ee6>as</span> <span style=color:#f2d5cf>pop</span>
 </span></span><span style=display:flex><span>
 </span></span><span style=display:flex><span><span style=color:#737994;font-style:italic>// Define overall formatting defaults for the document.</span>
 </span></span><span style=display:flex><span><span style=color:#737994;font-style:italic>// These settings can be overwritten later on.</span>
@@ -232,7 +232,7 @@
 </span></span><span style=display:flex><span>  [<span style=color:#8caaee>#box</span>(<span style=color:#f2d5cf>inset</span>: (<span style=color:#f2d5cf>bottom</span>: <span style=color:#99d1db;font-weight:700>-</span><span style=color:#ef9f76>0.3</span><span style=color:#ca9ee6>em</span>), <span style=color:#8caaee>image</span>(<span style=color:#f2d5cf>height</span>: <span style=color:#ef9f76>1.2</span><span style=color:#ca9ee6>em</span>, <span style=color:#a6d189>&#34;images/cellular_raza_dark_mode.svg&#34;</span>)) - Novel Flexibility in Design of Agent-Based Models in Cellular Systems],
 </span></span><span style=display:flex><span>  authors: &#34;Jonas Pleyer¹, Christian Fleck¹&#34;,
 </span></span><span style=display:flex><span>  institutes: &#34;¹Freiburg Center for Data-Analysis and Modeling&#34;,
-</span></span><span style=display:flex><span>  image: image(&#34;/UFR-Siegel-white.png&#34;),
+</span></span><span style=display:flex><span>  logo: image(&#34;UFR-Siegel-white.png&#34;),
 </span></span><span style=display:flex><span>)
 </span></span><span style=display:flex><span>
 </span></span><span style=display:flex><span><span style=color:#f2d5cf>#pop</span>.column-box()[
@@ -383,7 +383,7 @@
 </span></span></span><span style=display:flex><span><span style=color:#e78284>
 </span></span></span><span style=display:flex><span><span style=color:#e78284>	#pop.column-box(heading: &#34;Sources&#34;, stretch-to-next: true)[
 </span></span></span><span style=display:flex><span><span style=color:#e78284>          #set text(size: 24pt)
-</span></span></span><span style=display:flex><span><span style=color:#e78284>          #bibliography(&#34;/cellular_raza.bib&#34;, title: none)
+</span></span></span><span style=display:flex><span><span style=color:#e78284>          #bibliography(&#34;cellular_raza.bib&#34;, title: none)
 </span></span></span><span style=display:flex><span><span style=color:#e78284>        ]
 </span></span></span><span style=display:flex><span><span style=color:#e78284>]
 </span></span></span><span style=display:flex><span><span style=color:#e78284>
